SMART#1 heart hover fix is done on small screens and resto page. Heart display on 1024px+ screens landing page is ongoing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -360,15 +360,7 @@ html:lang(fr) p[lang=fr] {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.card-content .white, .card-content .gradient {
-  position: absolute;
-  right: 7%;
-  opacity: 1;
-  width: 22px;
-}
-.card-content .gradient {
-  opacity: 0;
+  position: relative;
 }
 
 .text-left h3 {
@@ -386,7 +378,7 @@ html:lang(fr) p[lang=fr] {
 }
 
 /****** end landing page ******/
-/****** restaurant ******/
+/****** restaurant page ******/
 /****** header ******/
 .header-page {
   display: flex;
@@ -448,21 +440,13 @@ a {
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   object-fit: cover;
   object-position: 50% 60%;
+  position: relative;
 }
 .img-cover h1 {
   margin: 0;
-}
-.img-cover #white, .img-cover #gradient {
-  position: absolute;
-  right: 7%;
-  opacity: 1;
-  width: 22px;
-}
-.img-cover #gradient {
-  opacity: 0;
 }
 
 .menu {
@@ -568,6 +552,7 @@ a {
 }
 /***** large devices *****/
 @media (min-width: 1024px) {
+  /****** landing page ******/
   .load img {
     margin: 2.4% 0;
   }
@@ -646,7 +631,8 @@ a {
     object-position: 50% 60%;
     border-radius: 15px 15px 0 0;
   }
-  /***** restaurant-page ******/
+  /****** end landing page ******/
+  /***** restaurant page ******/
   .menu-width {
     width: 75.5%;
   }
@@ -770,6 +756,44 @@ a {
   }
   .button-choose-size {
     width: 23%;
+  }
+}
+#white, #gradient,
+#white1, #white2, #white3, #white4,
+#gradient1, #gradient2, #gradient3, #gradient4 {
+  position: absolute;
+  right: 7%;
+  width: 22px;
+}
+
+#white,
+#white1, #white2, #white3, #white4 {
+  opacity: 1;
+}
+#white:hover,
+#white1:hover, #white2:hover, #white3:hover, #white4:hover {
+  opacity: 0;
+}
+
+#gradient,
+#gradient1, #gradient2, #gradient3, #gradient4 {
+  opacity: 0;
+}
+#gradient:hover,
+#gradient1:hover, #gradient2:hover, #gradient3:hover, #gradient4:hover {
+  opacity: 1;
+}
+
+/****** media queries ******/
+@media (min-width: 1024px) {
+  /****** landing page ******/
+  .card-content #white1, .card-content #white2, .card-content #white3, .card-content #white4,
+  .card-content #gradient1, .card-content #gradient2, .card-content #gradient3, .card-content #gradient4 {
+    right: 15%;
+  }
+  /****** restaurant page ******/
+  .img-cover #white, .img-cover #gradient {
+    right: 30%;
   }
 }
 footer {
